<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- dashboard strings -->

	<string name="app_name">Admin Panel</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="_logout_string"><u>logout</u></string>
	<string name="garage_doc_string">Garage Doc</string>
	<string name="add_vehicles_string">Add Vehicles</string>
	<string name="s_n_string">S.N</string>
	<string name="token_time_string">Token Time</string>
	<string name="bike_no_string">Bike No</string>
	<string name="details_string"> Details</string>
	<string name="s_n_ek1_string">S.N</string>
	<string name="token_time_ek1_string">Token Time</string>
	<string name="status_string">Status</string>
	<string name="home_string">Home</string>
	<string name="notification_string">Notification</string>
	<string name="call_string">Call</string>
	<string name="setting_string">Setting</string>
	<string name="garage_doc_ek1_string">Garage Doc</string>
	<string name="username_string">Username</string>
	<string name="password_string">Password</string>
	<string name="submit_string">Submit</string>
	<string name="_add_bike_string">ADD BIKE</string>
	<string name="_add_scooter_string">ADD SCOOTER</string>
	<string name="dismiss_string">DISMISS</string>
	<string name="_10_59_string">10:59</string>
	<string name="garage_doc_ek2_string">Garage Doc</string>
	<string name="ca_string">Ca</string>
	<string name="pending_string">Pending</string>
	<string name="process_string">Process</string>
	<string name="delivered_string">Delivered</string>
	<string name="cancelled_string">Cancelled</string>
	<string name="home_ek1_string">Home</string>
	<string name="notification_ek1_string">Notification</string>
	<string name="call_ek1_string">Call</string>
	<string name="setting_ek1_string">Setting</string>
	<string name="ca_ek1_string">Ca</string>
	<string name="garage_doc_ek3_string">Garage Doc</string>
	<string name="yamaha_alpha_string">Yamaha Alpha</string>
	<string name="yamaha_fascino_string">Yamaha Fascino</string>
	<string name="yamaha_mt_15_string">Yamaha Mt-15</string>
	<string name="yamaha_fzs_string">Yamaha Fzs</string>
	<string name="home_ek2_string">Home</string>
	<string name="notification_ek2_string">Notification</string>
	<string name="call_ek2_string">Call</string>
	<string name="setting_ek2_string">Setting</string>
	<string name="garage_doc_ek4_string">Garage Doc</string>
	<string name="bike_details_string">Bike Details</string>
	<string name="bike_model__string">Bike Model:</string>
	<string name="number_plate__string">Number plate:</string>
	<string name="choose_bike_color__string">Choose bike color:</string>
	<string name="black_string">Black</string>
	<string name="blue_string">Blue</string>
	<string name="red_string">Red</string>
	<string name="orange_string">Orange</string>
	<string name="home_ek3_string">Home</string>
	<string name="notification_ek3_string">Notification</string>
	<string name="call_ek3_string">Call</string>
	<string name="setting_ek3_string">Setting</string>
	<string name="home_ek4_string">Home</string>
	<string name="notification_ek4_string">Notification</string>
	<string name="call_ek4_string">Call</string>
	<string name="setting_ek4_string">Setting</string>
	<string name="home_ek5_string">Home</string>
	<string name="notification_ek5_string">Notification</string>
	<string name="call_ek5_string">Call</string>
	<string name="setting_ek5_string">Setting</string>
	<string name="home_ek6_string">Home</string>
	<string name="account_string">Account</string>
	<string name="notification_ek9_string">Notification</string>
	<string name="book_appointment_string">Book Appointment</string>
	<string name="_25__discount_on_oil_change__string">  25%  Discount on Oil Change.</string>
	<string name="your_vehiche_is_on_bayarea__string"> Your Vehiche is On BayArea.</string>
	<string name="notification_ek12_string">Notification</string>
	<string name="_mark_all_as_read_string">Mark All As Read</string>
	<string name="your_vehicle_is_ready_to_pickup__string">  Your Vehicle Is Ready To PickUp.</string>
	<string name="home_ek8_string">Home</string>
	<string name="notification_ek14_string">Notification</string>
	<string name="call_ek6_string">Call</string>
	<string name="setting_ek6_string">Setting</string>
	<string name="home_ek9_string">Home</string>
	<string name="account_ek1_string">Account</string>
	<string name="notification_ek15_string">Notification</string>
	<string name="book_appointment_ek1_string">Book Appointment</string>
	<string name="_25__discount_on_oil_change__ek1_string">  25%  Discount on Oil Change.</string>
	<string name="your_vehiche_is_on_bayarea__ek1_string"> Your Vehiche is On BayArea.</string>
	<string name="notification_ek18_string">Notification</string>
	<string name="your_vehicle_is_ready_to_pickup__ek1_string">  Your Vehicle Is Ready To PickUp.</string>
	<string name="home_ek11_string">Home</string>
	<string name="notification_ek20_string">Notification</string>
	<string name="call_ek7_string">Call</string>
	<string name="setting_ek7_string">Setting</string>
	<string name="home_ek12_string">Home</string>
	<string name="notification_ek21_string">Notification</string>
	<string name="call_ek8_string">Call</string>
	<string name="setting_ek8_string">Setting</string>
	<string name="home_ek13_string">Home</string>
	<string name="notification_ek22_string">Notification</string>
	<string name="call_ek9_string">Call</string>
	<string name="setting_ek9_string">Setting</string>
	<string name="ca_ek2_string">Ca</string>
	<string name="vehicle_details__string">Vehicle Details:</string>
	<string name="vehicle_number__string">Vehicle Number:</string>
	<string name="text_string">Part Name</string>
	<string name="text_ek1_string"> Price</string>
	<string name="text_ek2_string">Remarks</string>
	<string name="text_ek3_string">1.Brake</string>
	<string name="text_ek4_string">Rs.200       </string>
	<string name="text_ek6_string">2.</string>
	<string name="text_ek7_string">Rs.300       </string>
	<string name="text_ek9_string">3.</string>
	<string name="text_ek10_string">Rs.500       </string>
	<string name="text_ek12_string">Total Amount</string>
	<string name="hhhh_string">Rs.1000</string>
	<string name="text_ek13_string"></string>
	<string name="text_ek14_string">Part Name</string>
	<string name="text_ek15_string"> Price</string>
	<string name="text_ek16_string">Remarks</string>
	<string name="text_ek17_string">1.Tyre</string>
	<string name="text_ek18_string">Rs.400       </string>
	<string name="text_ek20_string">2.</string>
	<string name="text_ek21_string">Rs.300       </string>
	<string name="text_ek23_string">3.</string>
	<string name="text_ek24_string">Rs.500       </string>
	<string name="text_ek26_string">Total Amount</string>
	<string name="hhhh_ek1_string">Rs.12000</string>
	<string name="text_ek27_string"></string>
	<string name="cancelled_ek1_string">Cancelled</string>
	<string name="pending_ek1_string">Pending</string>
	<string name="process_ek1_string">Process</string>
	<string name="delivered_ek1_string">Delivered</string>
	<string name="changes_to_be_made_from_showroom_side_string">Changes to be made from showroom side</string>
	<string name="pay_string">Pay</string>
	<string name="home_ek14_string">Home</string>
	<string name="notification_ek23_string">Notification</string>
	<string name="call_ek10_string">Call</string>
	<string name="setting_ek10_string">Setting</string>
	<string name="add_part_name___services_string">Add Part Name / Services</string>
	<string name="part_maintenance_ek3_string">        Part Maintenance</string>
	<string name="part_replacement_string">        Part Replacement</string>
	<string name="choose_parts_string">Choose Parts</string>
	<string name="confirm_string">Confirm </string>
	<string name="choose_parts_ek1_string">Choose Parts</string>
	<string name="confirm_ek1_string">Confirm </string>
	<string name="xpgaugmgsmcz_string">xPgaUGMgSmCZ</string>
    <string name="ellipse_1">ellipse_1</string>
	<string name="black_and_white_modern_typographic_simple_virus_apparel_logo_1_1">black_and_white_modern_typographic_simple_virus_apparel_logo__1__1</string>
    <string name="vector_ek4">vector_ek4</string>
    <string name="password">password</string>
<!--	<resources>-->
<!--		<string name="app_name">DropdownExample</string>-->
<!--		<string-array name="dropdown_items">-->
<!--			<item>Item 1</item>-->
<!--			<item>Item 2</item>-->
<!--			<item>Item 3</item>-->
<!--			<item>Item 4</item>-->
<!--		</string-array>-->
<!--	</resources>-->

</resources>