<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/bike_scooter_details" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/line_10"
				android:background="@drawable/line_10_shape"
				 android:layout_marginStart="-220dp"
				android:layout_marginTop="-185dp"
				android:layout_width="363dp"
				android:layout_height="1dp" />





			<RelativeLayout android:id="@+id/page_bike_scooter_details_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/_bg__bike_scooter_details_ek2"
					android:layout_width="360dp"
					android:layout_height="800dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__bike_scooter_details_ek2_shape" />

				<View
					android:id="@+id/rectangle_1_ek4"
					android:layout_width="360dp"
					android:layout_height="251dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="-20dp"
					android:background="@drawable/rectangle_1_ek4_shape" />

				<TextView android:id="@+id/garage_doc_ek4"

					android:textSize="39sp"
					android:textColor="@color/garage_doc_color"
					android:layout_marginStart="15dp"
					android:layout_marginTop="69dp"
					android:layout_width="298.5dp"
					android:layout_height="69.5dp"
					android:text="@string/garage_doc_ek4_string"
					 />

				<View   android:id="@+id/rectangle_93_ek1"
					android:background="@drawable/rectangle_93_ek1_shape"
					 android:layout_marginStart="13dp"
					android:layout_marginTop="240dp"
					android:layout_width="334dp"
					android:layout_height="46dp" />

				<TextView android:id="@+id/bike_details"

					android:textSize="25sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="109dp"
					android:layout_marginTop="246dp"
					android:layout_width="172.5dp"
					android:layout_height="55.5dp"
					android:text="@string/bike_details_string"
					 />

				<TextView android:id="@+id/bike_model_"

					android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="13dp"
					android:layout_marginTop="313dp"
					android:layout_width="138dp"
					android:layout_height="44dp"
					android:text="@string/bike_model__string"
					 />

				<TextView android:id="@+id/number_plate_"

					android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="13dp"
					android:layout_marginTop="364dp"
					android:layout_width="171dp"
					android:layout_height="44dp"
					android:text="@string/number_plate__string"
					 />

				<TextView android:id="@+id/choose_bike_color_"

					android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="13dp"
					android:layout_marginTop="410dp"
					android:layout_width="211dp"
					android:layout_height="44dp"
					android:text="@string/choose_bike_color__string"
					 />

				<View   android:id="@+id/rectangle_97"
					android:background="@drawable/rectangle_97_shape"
					 android:layout_marginStart="46dp"
					android:layout_marginTop="455dp"
					android:layout_width="110dp"
					android:layout_height="37dp" />

				<View   android:id="@+id/rectangle_98"
					android:background="@drawable/rectangle_98_shape"
					 android:layout_marginStart="196dp"
					android:layout_marginTop="455dp"
					android:layout_width="110dp"
					android:layout_height="37dp" />

				<View   android:id="@+id/rectangle_100"
					android:background="@drawable/rectangle_100_shape"
					 android:alpha="0.66000002622604"
					 android:layout_marginStart="202dp"
					android:layout_marginTop="514dp"
					android:layout_width="110dp"
					android:layout_height="37dp" />

				<View   android:id="@+id/rectangle_99"
					android:background="@drawable/rectangle_99_shape"
					 android:layout_marginStart="46dp"
					android:layout_marginTop="516dp"
					android:layout_width="110dp"
					android:layout_height="37dp" />

				<TextView android:id="@+id/black"

					android:textSize="20sp"
					android:textColor="@color/_logout_color"
					android:layout_marginStart="75dp"
					android:layout_marginTop="458dp"
					android:layout_width="81dp"
					android:layout_height="44dp"
					android:text="@string/black_string"
					 />

				<TextView android:id="@+id/blue"

					android:textSize="20sp"
					android:textColor="@color/_logout_color"
					android:layout_marginStart="232dp"
					android:layout_marginTop="458dp"
					android:layout_width="70dp"
					android:layout_height="44dp"
					android:text="@string/blue_string"
					 />

				<TextView android:id="@+id/red"

					android:textSize="20sp"
					android:textColor="@color/_logout_color"
					android:layout_marginStart="81dp"
					android:layout_marginTop="516dp"
					android:layout_width="65dp"
					android:layout_height="44dp"
					android:text="@string/red_string"
					 />

				<TextView android:id="@+id/orange"

					android:textSize="20sp"
					android:textColor="@color/_logout_color"
					android:layout_marginStart="221dp"
					android:layout_marginTop="517dp"
					android:layout_width="102dp"
					android:layout_height="44dp"
					android:text="@string/orange_string"
					 />

				<View   android:id="@+id/line_21"
					android:background="@drawable/line_21_shape"
					 android:layout_marginStart="154dp"
					android:layout_marginTop="335dp"
					android:layout_width="206dp"
					android:layout_height="1dp" />

				<View   android:id="@+id/line_22"
					android:background="@drawable/line_22_shape"
					 android:layout_marginStart="175dp"
					android:layout_marginTop="389dp"
					android:layout_width="185dp"
					android:layout_height="1dp" />


				<RelativeLayout
					android:id="@+id/frame_25"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="729dp"
					android:background="@drawable/rectangle_97_shape">


					<ImageView
						android:id="@+id/vector_ek1"
						android:layout_width="29dp"
						android:layout_height="31dp"
						android:layout_marginStart="30dp"
						android:layout_marginTop="7dp"
						android:contentDescription="vector_ek1"
						android:src="@drawable/vector_ek1" />

					<ImageView
						android:id="@+id/vector_ek4"
						android:layout_width="36dp"
						android:layout_height="31dp"
						android:layout_marginStart="291dp"
						android:layout_marginTop="7dp"
						android:contentDescription="vector_ek4"
						android:src="@drawable/vector_ek4" />

					<ImageView
						android:id="@+id/vector_ek20"
						android:layout_width="30dp"
						android:layout_height="36dp"
						android:layout_marginStart="163dp"
						android:layout_marginTop="7dp"
						android:contentDescription="vector_ek20"
						android:src="@drawable/vector_ek20" />


				</RelativeLayout>

			</RelativeLayout>








		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>