<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/_bg__add_bike_scooter_ek2_shape">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>

		<!-- Line View -->
		<View
			android:id="@+id/line_10"
			android:layout_width="363dp"
			android:layout_height="1dp"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginStart="-220dp"
			android:layout_marginTop="-185dp"
			android:background="@drawable/line_10_shape" />

		<!-- Main RelativeLayout -->


		<!-- Inner RelativeLayout -->
		<RelativeLayout
			android:id="@+id/slash_page"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp"
			>

			<!-- Ellipse ImageView -->
			<ImageView
				android:id="@+id/ellipse_1"
				android:layout_width="505dp"
				android:layout_height="475dp"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="-73dp"
				android:layout_marginTop="-80dp"
				android:contentDescription="@string/ellipse_1"
				android:scaleType="fitXY"
				android:src="@drawable/ellipse_1" />

			<!-- Garage Doc TextView -->

			<!-- Logo ImageView -->

			<TextView
				android:id="@+id/garage_doc_ek1"
				android:layout_width="315dp"
				android:layout_height="87.5dp"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="20dp"
				android:layout_marginTop="280dp"
				android:fontFamily="@font/ruslan_display"
				android:text="GARAGE DOC"
				android:textColor="@color/_bg__login_ek2_color"
				android:textSize="39sp" />

			<ImageView
				android:id="@+id/black_and_white_modern_typographic_simple_virus_apparel_logo__1__1"
				android:layout_width="245dp"
				android:layout_height="251dp"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="57dp"
				android:layout_marginTop="19dp"
				android:contentDescription="@string/black_and_white_modern_typographic_simple_virus_apparel_logo_1_1"
				android:scaleType="fitXY"
				android:src="@drawable/black_and_white_modern_typographic_simple_virus_apparel_logo__1__1" />

			<!-- Rectangle 1 View -->
			<View
				android:id="@+id/rectangle_1_ek1"
				android:layout_width="319dp"
				android:layout_height="48dp"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="23dp"
				android:layout_marginTop="455dp"
				android:background="@drawable/rectangle_101_shape" />

			<!-- Username TextView -->
			<TextView
				android:id="@+id/username"
				android:layout_width="142dp"
				android:layout_height="48dp"
				android:layout_alignTop="@+id/black_and_white_modern_typographic_simple_virus_apparel_logo__1__1"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="61dp"
				android:layout_marginTop="444dp"
				android:text="@string/username_string"
				android:textColor="@color/black"
				android:textSize="22sp" />

			<!-- Rectangle 2 View -->
			<View
				android:id="@+id/rectangle_2"
				android:layout_width="319dp"
				android:layout_height="49dp"
				android:layout_alignTop="@+id/black_and_white_modern_typographic_simple_virus_apparel_logo__1__1"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="23dp"
				android:layout_marginTop="509dp"
				android:background="@drawable/rectangle_101_shape" />

			<!-- Password TextView -->
			<TextView
				android:id="@+id/password"
				android:layout_width="135dp"
				android:layout_height="48dp"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="61dp"
				android:layout_marginTop="536dp"
				android:text="@string/password_string"
				android:textColor="@color/black"
				android:textSize="22sp" />


			<!-- Rectangle 2 ek1 View -->
			<View
				android:id="@+id/rectangle_2_ek1"
				android:layout_width="217dp"
				android:layout_height="51dp"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="61dp"
				android:layout_marginTop="699dp"
				android:background="@drawable/rectangle_2_ek1_shape" />

			<!-- Submit TextView -->
			<TextView
				android:id="@+id/submit"
				android:layout_width="98dp"
				android:layout_height="44dp"
				android:layout_alignTop="@+id/black_and_white_modern_typographic_simple_virus_apparel_logo__1__1"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="134dp"
				android:layout_marginTop="691dp"
				android:clickable="true"
				android:focusable="true"
				android:text="@string/submit_string"
				android:textColor="@color/_logout_color"
				android:textSize="20sp" />
		</RelativeLayout>

	</RelativeLayout>



</ScrollView>