<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/mark_as_read_notification_" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/line_10"
				android:background="@drawable/line_10_shape"
				 android:layout_marginStart="-220dp"
				android:layout_marginTop="-185dp"
				android:layout_width="363dp"
				android:layout_height="1dp" />







			<RelativeLayout android:id="@+id/page_mark_as_read_notification__ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__mark_as_read_notification__ek2"
					android:background="@drawable/_bg__mark_as_read_notification__ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />

				<TextView android:id="@+id/home_ek9"

					android:textSize="15sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="28dp"
					android:layout_marginTop="1019dp"
					android:layout_width="62.5dp"
					android:layout_height="34.5dp"
					android:text="@string/home_ek9_string"
					 />

				<TextView android:id="@+id/account_ek1"

					android:textSize="15sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="337dp"
					android:layout_marginTop="1019dp"
					android:layout_width="100.5dp"
					android:layout_height="33.5dp"
					android:text="@string/account_ek1_string"
					 />

				<TextView android:id="@+id/notification_ek15"

					android:textSize="15sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="90dp"
					android:layout_marginTop="1019dp"
					android:layout_width="101.5dp"
					android:layout_height="34.5dp"
					android:text="@string/notification_ek15_string"
					 />

				<TextView android:id="@+id/book_appointment_ek1"

					android:textSize="15sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="188dp"
					android:layout_marginTop="1019dp"
					android:layout_width="150.5dp"
					android:layout_height="34.5dp"
					android:text="@string/book_appointment_ek1_string"
					 />

				<ImageView android:id="@+id/home_ek10"
					android:src="@drawable/home_ek10"
					android:contentDescription="home_ek10"
					 android:alpha="0.5"
					android:layout_marginStart="29dp"
					android:layout_marginTop="987dp"
					android:layout_width="38dp"
					android:layout_height="29dp" />

				<ImageView android:id="@+id/plus_math_ek1"
					android:src="@drawable/plus_math_ek1"
					android:contentDescription="plus_math_ek1"
					 android:alpha="0.5"
					android:layout_marginStart="221dp"
					android:layout_marginTop="977dp"
					android:layout_width="65dp"
					android:layout_height="52dp" />

				<ImageView android:id="@+id/notification_ek16"
					android:src="@drawable/notification_ek16"
					android:contentDescription="notification_ek16"
					 android:layout_marginStart="109dp"
					android:layout_marginTop="985dp"
					android:layout_width="40dp"
					android:layout_height="38dp" />

				<ImageView android:id="@+id/notification_ek17"
					android:src="@drawable/notification_ek17"
					android:contentDescription="notification_ek17"
					 android:layout_marginStart="109dp"
					android:layout_marginTop="985dp"
					android:layout_width="40dp"
					android:layout_height="38dp" />

				<ImageView android:id="@+id/male_user_ek1"
					android:src="@drawable/male_user_ek1"
					android:contentDescription="male_user_ek1"
					 android:alpha="0.5"
					android:layout_marginStart="338dp"
					android:layout_marginTop="984dp"
					android:layout_width="50dp"
					android:layout_height="38dp" />

				<View   android:id="@+id/rectangle_5_ek1"
					android:background="@drawable/rectangle_5_ek1_shape"
					 android:alpha="0.53"
					 android:layout_marginStart="-7dp"
					android:layout_marginTop="139dp"
					android:layout_width="430dp"
					android:layout_height="51dp" />

				<View   android:id="@+id/rectangle_7_ek1"
					android:background="@drawable/rectangle_7_ek1_shape"
					 android:alpha="0.53"
					 android:layout_marginStart="-7dp"
					android:layout_marginTop="295dp"
					android:layout_width="430dp"
					android:layout_height="51dp" />

				<TextView android:id="@+id/_25__discount_on_oil_change__ek1"

					android:alpha="0.53"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="5dp"
					android:layout_marginTop="300dp"
					android:layout_width="333dp"
					android:layout_height="45dp"
					android:text="@string/_25__discount_on_oil_change__ek1_string"
					 />

				<View   android:id="@+id/rectangle_6_ek1"
					android:background="@drawable/rectangle_6_ek1_shape"
					 android:alpha="0.53"
					 android:layout_marginStart="-6dp"
					android:layout_marginTop="216dp"
					android:layout_width="430dp"
					android:layout_height="51dp" />

				<TextView android:id="@+id/your_vehiche_is_on_bayarea__ek1"

					android:alpha="0.53"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="9dp"
					android:layout_marginTop="222dp"
					android:layout_width="320dp"
					android:layout_height="45dp"
					android:text="@string/your_vehiche_is_on_bayarea__ek1_string"
					 />

				<TextView android:id="@+id/notification_ek18"

					android:textSize="27sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="10dp"
					android:layout_marginTop="52dp"
					android:layout_width="177.5dp"
					android:layout_height="60.5dp"
					android:text="@string/notification_ek18_string"
					 />

				<ImageView android:id="@+id/notification_ek19"
					android:src="@drawable/notification_ek19"
					android:contentDescription="notification_ek19"
					 android:layout_marginStart="161dp"
					android:layout_marginTop="54dp"
					android:layout_width="40dp"
					android:layout_height="38dp" />

				<TextView android:id="@+id/your_vehicle_is_ready_to_pickup__ek1"

					android:alpha="0.53"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginStart="5dp"
					android:layout_marginTop="147dp"
					android:layout_width="362dp"
					android:layout_height="45dp"
					android:text="@string/your_vehicle_is_ready_to_pickup__ek1_string"
					 />


				<RelativeLayout android:id="@+id/frame_25_ek1"
					android:layout_marginTop="729dp"
					android:layout_marginStart="3dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/rectangle_97_shape"
					>



					<ImageView android:id="@+id/vector_ek1"
						android:src="@drawable/vector_ek1"
						android:contentDescription="vector_ek1"
						 android:layout_marginStart="30dp"
						android:layout_marginTop="7dp"
						android:layout_width="29dp"
						android:layout_height="31dp" />

					<ImageView android:id="@+id/vector_ek4"
						android:src="@drawable/vector_ek4"
						android:contentDescription="vector_ek4"
						 android:layout_marginStart="291dp"
						android:layout_marginTop="7dp"
						android:layout_width="36dp"
						android:layout_height="31dp" />

					<ImageView android:id="@+id/vector_ek20"
						android:src="@drawable/vector_ek20"
						android:contentDescription="vector_ek20"
						 android:layout_marginStart="163dp"
						android:layout_marginTop="7dp"
						android:layout_width="30dp"
						android:layout_height="36dp" />


					<RelativeLayout android:id="@+id/frame_23_ek5"
						android:layout_marginTop="0dp"
						android:layout_marginStart="4dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/frame_23_ek6"
							android:layout_marginTop="0dp"
							android:layout_marginStart="4dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							/>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>





		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>